other/require-reasonable-pdbs/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-reasonable-pdbs
policies:
- ../require-reasonable-pdbs.yaml
resources:
- pdb-maxUnavailable-bad.yaml
- pdb-maxUnavailable-good.yaml
- pdb-minAvailable-bad.yaml
- pdb-minAvailable-good.yaml
results:
- kind: PodDisruptionBudget
  policy: require-reasonable-pdbs
  rule: require-reasonable-pdb-percentage
  resources:
  - good-maxUnavailable-pdb01
  - good-maxUnavailable-pdb02
  - good-maxUnavailable-pdb03
  - good-maxUnavailable-pdb04
  - good-maxUnavailable-pdb05
  - good-maxUnavailable-pdb06
  - good-maxUnavailable-pdb06
  - good-minAvailable-pdb01
  - good-minAvailable-pdb02
  - good-minAvailable-pdb03
  - good-minAvailable-pdb04
  - good-minAvailable-pdb05
  - good-minAvailable-pdb06
  result: pass
- kind: PodDisruptionBudget
  policy: require-reasonable-pdbs
  rule: require-reasonable-pdb-percentage
  resources:
  - bad-maxUnavailable-pdb01
  - bad-maxUnavailable-pdb02
  - bad-maxUnavailable-pdb03
  - bad-maxUnavailable-pdb04
  - bad-maxUnavailable-pdb05
  - bad-maxUnavailable-pdb06
  - bad-minAvailable-pdb01
  - bad-minAvailable-pdb02
  - bad-minAvailable-pdb03
  - bad-minAvailable-pdb04
  - bad-minAvailable-pdb05
  - bad-minAvailable-pdb06
  result: fail
